bin_PROGRAMS = tut1 # tut2 tut3

tut1_SOURCES = main-tut1.cc tut_model.hh tut_moves.hh tut_neighborhoods.hh
#tut2_SOURCES = main-tut2.cc tut_model.hh tut_moves.hh tut_neighborhoods.hh
#tut3_SOURCES = main-tut3.cc tut_model.hh tut_moves.hh tut_neighborhoods.hh

INCLUDES = $(metslib_CFLAGS)

LDADD = $(metslib_LIBS)
