bin_PROGRAMS = tut1 # tut2 tut3

tut1_SOURCES = main-tut1.cc tut_model.h tut_moves.h tut_neighborhoods.h
#tut2_SOURCES = main-tut2.cc tut_model.h tut_moves.h tut_neighborhoods.h
#tut3_SOURCES = main-tut3.cc tut_model.h tut_moves.h tut_neighborhoods.h

INCLUDES = $(metslib_CFLAGS)

LDADD = $(metslib_LIBS)
