# Export some problems from the QAPLIB, for testing purposes.
EXTRA_DIST = chr12a.dat chr15b.dat chr20a.dat chr22b.dat tai10a.dat \
	tai15a.dat  tai20b.dat   tai30b.dat  tai50a.dat  tai64c.sln \
	chr12a.sln  chr15b.sln   chr20a.sln  chr22b.sln  tai10b.dat \
	tai15a.sln  tai20b.sln   tai30b.sln  tai50b.dat  tai80a.dat \
	chr12b.dat  chr15c.dat   chr20b.dat  chr25a.dat  tai12a.dat \
	tai15b.dat  tai256c.dat  tai35a.dat  tai50b.sln  tai80a.sln \
	chr12b.sln  chr15c.sln   chr20b.sln  chr25a.sln  tai12a.sln \
	tai15b.sln  tai256c.sln  tai35b.dat  tai60a.dat  tai80b.dat \
	chr12c.dat  chr18a.dat   chr20c.dat  README      tai12b.dat \
	tai17a.dat  tai25a.dat   tai35b.sln  tai60a.sln  tai80b.sln \
	chr12c.sln  chr18a.sln   chr20c.sln  tai100a.dat tai12b.sln \
	tai17a.sln  tai25b.dat   tai40a.dat  tai60b.dat  chr15a.dat \
	chr18b.dat  chr22a.dat   tai100b.dat tai150b.dat tai20a.dat \
	tai25b.sln  tai40b.dat   tai60b.sln  chr15a.sln  chr18b.sln \
	chr22a.sln  tai100b.sln  tai150b.sln tai20a.sln  tai30a.dat \
	tai40b.sln  tai64c.dat

