bin_PROGRAMS = lsqap rrlsqap saqap tsqap itsqap 

lsqap_SOURCES = main_ls.cc qap_model.hpp 

rrlsqap_SOURCES = main_rrls.cc qap_model.hpp 

saqap_SOURCES = main_sa.cc qap_model.hpp

tsqap_SOURCES = main_ts.cc qap_model.hpp 

itsqap_SOURCES = main_its.cc qap_model.hpp 


INCLUDES = $(metslib_CFLAGS)

LDADD = $(metslib_LIBS)
